--- a/motobudzetapi/pom.xml
+++ b/motobudzetapi/pom.xml
@@ -21,6 +21,17 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.14</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.4.14</version>
+        </dependency>
 
         <dependency>
             <groupId>io.micrometer</groupId>
