--- a/motobudzetapi/pom.xml
+++ b/motobudzetapi/pom.xml
@@ -129,7 +129,7 @@
         </dependency>
 
 
-<!--@@@@@@@@@@@@@@@@@@@@@@@@@ END SPRING SECURITY @@@@@@@@@@@@@@@@@@@@@@@@@@-->
+        <!--@@@@@@@@@@@@@@@@@@@@@@@@@ END SPRING SECURITY @@@@@@@@@@@@@@@@@@@@@@@@@@-->
 
 
 <!--@@@@@@@@@@@@@@@@@@@@@@@@@ DATA PERSISTANCE  @@@@@@@@@@@@@@@@@@@@@@@@@@-->
@@ -143,12 +143,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.7.2</version>
             <scope>runtime</scope>
         </dependency>
-
 
 <!--@@@@@@@@@@@@@@@@@@@@@@@@@ END DATA PERSISTANCE  @@@@@@@@@@@@@@@@@@@@@@@@@@-->
 
